feat: new profile page, updated work and fun profiles

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -47,6 +47,53 @@ const translations = [
 			}
 		</ul>
 
+		<div
+			class="flex flex-wrap justify-evenly rounded-full border border-border ~gap-2/4 ~p-2/4"
+		>
+			<span>
+				<A
+					href="https://flowcv.com/resume/mdrssqq018"
+					title="Resume"
+					target="_blank"
+				>
+					Resume
+				</A>
+			</span>
+			<span>
+				<A
+					href="https://www.linkedin.com/in/naparajith/"
+					title="LinkedIn - Naparajith T L"
+					target="_blank"
+				>
+					LinkedIn
+				</A>
+			</span>
+			<span>
+				<A
+					href={"https://github.com/DrInfinite"}
+					title={`GitHub - DrInfinite`}
+					target="_blank"
+				>
+					GitHub
+				</A>
+			</span>
+			<span>
+				<A
+					href={"https://leetcode.com/u/DrInfinite/"}
+					title={`LeetCode - Naparajith T L`}
+					target="_blank"
+				>
+					LeetCode
+				</A>
+			</span>
+			<span>
+				<A href="/blog" title="Portfolio - Blog">Blog</A>
+			</span>
+			<span>
+				<A href="/contact" title="Portfolio - Contact"> Contact </A>
+			</span>
+		</div>
+
 		<table class="caption-top">
 			<caption class="mb-4 font-semibold italic">
 				Translations in select Indian languages
