--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,7 +14,10 @@ import Layout from "@/layouts/Layout.astro";
 			Try looking for another page or better, go back to start navigating again.
 			Sorry for any inconviences caused!
 		</p>
-		<button class="mx-auto place-self-center" onclick="history.back()">
+		<button
+			class="mx-auto place-self-center rounded-full px-4"
+			onclick="history.back()"
+		>
 			<span
 				class="bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
 			>
