--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -12,7 +12,10 @@ import Layout from "@/layouts/Layout.astro";
 			for any inconviences caused!
 		</p>
 
-		<button class="mx-auto place-self-center" onclick="history.back()">
+		<button
+			class="mx-auto place-self-center rounded-full px-4"
+			onclick="history.back()"
+		>
 			<span
 				class="bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
 			>
