fix: updated citations

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,9 @@ const learning = [
 				</blockquote>
 				<figcaption>
 					<cite>
-						- <strong class="text-inherit"> Unknown Hindu Shloka </strong></cite
+						- <strong class="text-inherit">
+							Unknown Sanskrit Shloka
+						</strong></cite
 					>
 				</figcaption>
 			</figure>
