--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -62,9 +62,9 @@ const leetcode = await LeetcodeProfile();
 		<span>
 			<A href="/blog" title="Portfolio - Blog">Blog</A>
 		</span>
-		<span>
+		<!-- <span>
 			<A href="/contact" title="Portfolio - Contact"> Contact </A>
-		</span>
+		</span> -->
 	</div>
 
 	<h3>GitHub Stats</h3>
@@ -90,4 +90,19 @@ const leetcode = await LeetcodeProfile();
 		</span>
 		<span>Rating: <strong>{leetcode.profile?.starRating}</strong></span>
 	</div>
+
+	<h2>Contact</h2>
+	<p>
+		Get in touch with me through this form or by using the email
+		<A href="mailto:naparajith@duck.com"> naparajith@duck.com</A>
+	</p>
+	<p>
+		If you prefer to chat, get in touch <A
+			href="https://api.whatsapp.com/send?phone=919940169018"
+			target="_blank"
+			title="WhatsApp"
+		>
+			here.
+		</A>
+	</p>
 </Layout>
