--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -60,11 +60,14 @@ const leetcode = await LeetcodeProfile();
 			<A href="/" title="Portfolio - Home"> Portfolio </A>
 		</span>
 		<span>
-			<A href="/blog" title="Portfolio - Blog">Blog</A>
+			<A
+				href={"https://bsky.app/profile/naparajith.in"}
+				title={`Naparajith | DrInfinite (@naparajith.in)`}
+				target="_blank"
+			>
+				BlueSky
+			</A>
 		</span>
-		<!-- <span>
-			<A href="/contact" title="Portfolio - Contact"> Contact </A>
-		</span> -->
 	</div>
 
 	<h3>GitHub Stats</h3>
