--- a/src/pages/quotes/index.astro
+++ b/src/pages/quotes/index.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 import { getCollection } from "astro:content";
 
 const quotes = await getCollection("quotes");
-quotes.sort((a, b) => parseInt(a.id) - parseInt(b.id));
+quotes.sort((a, b) => a.data.author.localeCompare(b.data.author));
 ---
 
 <Layout title="Quotes" description="A collection of quotes that I really like.">
