fix: improved footer image setup

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,6 +22,7 @@ const policy = await getCollection("policy");
 			class="xs:scale-50 sm:scale-[60%] md:scale-[70%] lg:scale-[80%] xl:scale-90 2xl:scale-100"
 			width={160}
 			height={50}
+			inferSize
 			loading={"lazy"}
 		/>
 	</a>
