--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const learning = [
 			<span class="-my-px ~size-48/96">
 				<Image
 					alt={"DrInfinite"}
-					class="mx-auto rounded-full"
+					class="mx-auto scale-90 rounded-full"
 					inferSize
 					width={520}
 					height={520}
