--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -87,7 +87,7 @@ const translations = [
 				</A>
 			</span>
 			<span>
-				<A href="/blog" title="Portfolio - Blog">Blog</A>
+				<A href="/quotes-i-like" title="Portfolio - Quotes">Quotes</A>
 			</span>
 			<span>
 				<A href="/contact" title="Portfolio - Contact"> Contact </A>
