--- a/src/pages/quotes-i-like/index.astro
+++ b/src/pages/quotes-i-like/index.astro
@@ -6,7 +6,7 @@ const quotes = await getCollection("quotes");
 quotes.sort((a, b) => a.data.author.localeCompare(b.data.author));
 ---
 
-<Layout title="Quotes" description="A collection of quotes that I really like.">
+<Layout title="Quotes I Like" description="A collection of quotes that I really like.">
 	<p>
 		A collection of quotes from various people that I resonate with and want to
 		share with a wider audience.
