chore: updated content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,7 +97,8 @@ const learning = [
 				{learning.map((concept) => <li>{concept}</li>)}
 			</ul>
 			<p>
-				If you would like to help me out in learning any of these concepts, please write to <A
+				If you would like to help me out in learning any of these concepts,
+				please write to <A
 					href="mailto:naparajith@duck.com"
 					title="E-Mail Address"
 					target="_blank"
