--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -59,7 +59,7 @@
 	}
 
 	body {
-		@apply prose prose-sm mx-auto scroll-smooth bg-background text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold;
+		@apply prose prose-sm mx-auto scroll-smooth bg-background font-mono text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold;
 	}
 
 	button {
@@ -92,6 +92,10 @@
 
 	blockquote {
 		@apply font-serif font-bold text-primary ~text-sm/3xl;
+	}
+
+	cite {
+		@apply font-sans;
 	}
 
 	details[open] summary {
