--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -18,7 +18,7 @@ const leetcode = await LeetcodeProfile();
 	<div
 		class="flex flex-wrap justify-evenly rounded-full border border-border ~gap-2/4 ~p-2/4"
 	>
-		<span>
+		<!-- <span>
 			<A
 				href="https://flowcv.com/resume/mdrssqq018"
 				title="Resume"
@@ -26,7 +26,7 @@ const leetcode = await LeetcodeProfile();
 			>
 				Resume
 			</A>
-		</span>
+		</span> -->
 		<span>
 			<A
 				href="https://www.linkedin.com/in/naparajith/"
