--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,47 +10,23 @@ const pathname = Astro.url.pathname;
 	<h3 class="text-center">
 		{pathname.toString().replace("/", "").replace(/\/.*/, "")}
 	</h3>
-	<div class="flex justify-between">
+	<div class="flex justify-between" transition:persist>
 		<div class="flex flex-wrap justify-evenly gap-4">
 			<A href="/">Home</A>
-			{
-				Astro.url.pathname !== "/profile" ? (
-					<A href="/profile">Profile</A>
-				) : (
-					<span class="hidden" />
-				)
-			}
+			<A href="/profile"> Profile </A>
 			<!-- <A href="/blog">Blog</A> -->
-			{
-				Astro.url.pathname !== "/quick-view" ? (
-					<A href="/quick-view">Quick View</A>
-				) : (
-					<span class="hidden" />
-				)
-			}
-			<A
+			<A href="/quick-view"> Quick View </A>
+		</div>
+
+		<button class="rounded-full px-4">
+			<a
 				href="https://flowcv.com/resume/mdrssqq018"
 				title="Resume"
 				target="_blank"
+				class="bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
 			>
 				Resume
-			</A>
-		</div>
-		<div class="flex flex-wrap justify-evenly gap-4">
-			<button class="rounded-full px-4" onclick="history.back()">
-				<span
-					class="bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
-				>
-					&larr;
-				</span>
-			</button>
-			<button class="rounded-full px-4" onclick="history.forward()">
-				<span
-					class="bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
-				>
-					&rarr;
-				</span>
-			</button>
-		</div>
+			</a>
+		</button>
 	</div>
 </header>
