fix: styling issues on profile page

--- a/src/pages/profile/[slug].astro
+++ b/src/pages/profile/[slug].astro
@@ -19,9 +19,9 @@ const { Content } = await render(about);
 	<h1>
 		{about.data.title}
 	</h1>
-	<div class="-mb-4 flex flex-row flex-wrap justify-between">
-		<!-- <p>Created: <strong>{about.data.created.toDateString()}</strong></p>
+	<!-- <div class="-mb-4 flex flex-row flex-wrap justify-between"> -->
+	<!-- <p>Created: <strong>{about.data.created.toDateString()}</strong></p>
 		<p>Updated: <strong>{about.data.updated?.toDateString()}</strong></p> -->
-	</div>
+	<!-- </div> -->
 	<Content />
 </Layout>
