fix: monospaced font

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,10 +6,6 @@
 	navigation: auto;
 }
 
-html {
-	font-family: "CaskaydiaCove Nerd Font", monospace;
-}
-
 @layer base {
 	:root {
 		--background: 0 0% 100%;
@@ -63,7 +59,7 @@ html {
 	}
 
 	body {
-		@apply prose prose-sm mx-auto scroll-smooth bg-background text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold;
+		@apply prose prose-sm mx-auto scroll-smooth bg-background font-mono text-foreground antialiased ~px-4/0 md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl selection:bg-primary selection:text-primary-foreground prose-a:font-semibold;
 	}
 
 	button {
