fix: footer content

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,7 +28,7 @@ const policy = await getCollection("policy");
 		/>
 	</a>
 	<p>
-		&copy; {date}, Naparajith.
+		&copy; {date} Naparajith.
 	</p>
 	<span class="flex flex-row justify-between ~gap-2/4">
 		{
