--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const policy = await getCollection("policy");
 ---
 
 <footer
-	class="mt-10 flex flex-col-reverse items-center justify-evenly border-t border-border pt-4 md:flex-row"
+	class="mt-10 flex flex-col-reverse items-center justify-between border-t border-border pt-4 md:flex-row"
 	transition:persist
 >
 	<a
