--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@ const policy = await getCollection("policy");
 	<p>
 		&copy; {date} Naparajith.
 	</p>
-	<span class="flex flex-row md:flex-col justify-between scale-90 ~gap-2/4">
+	<span class="flex scale-90 flex-row justify-between ~gap-2/4 md:flex-col">
 		{
 			policy.map((policy) => (
 				<A
