fix: footer image

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,8 @@ const policy = await getCollection("policy");
 			width={160}
 			height={50}
 			inferSize
-			loading={"lazy"}
+			decoding={"async"}
+			loading={"eager"}
 		/>
 	</a>
 	<p>
