fix: profile page content

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -109,7 +109,7 @@ const translations = [
 					translations.map(({ lang, name }) => (
 						<tr>
 							<td>{lang}</td>
-							<td>{name}</td>
+							<td class="font-sans">{name}</td>
 						</tr>
 					))
 				}
