--- a/src/pages/quick-view.astro
+++ b/src/pages/quick-view.astro
@@ -2,11 +2,9 @@
 export const prerender = false;
 
 import A from "@/components/A.astro";
-import GitHub, { github } from "@/components/quick-view/github/GitHub.astro";
+import GitHub from "@/components/quick-view/github/GitHub.astro";
 import GitHubLoading from "@/components/quick-view/github/GitHubLoading.astro";
-import LeetCode, {
-	leetcode,
-} from "@/components/quick-view/leetcode/LeetCode.astro";
+import LeetCode from "@/components/quick-view/leetcode/LeetCode.astro";
 import LeetCodeLoading from "@/components/quick-view/leetcode/LeetCodeLoading.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
@@ -39,8 +37,8 @@ import Layout from "@/layouts/Layout.astro";
 		</span>
 		<span>
 			<A
-				href={github.html_url}
-				title={`GitHub - ${github.login}`}
+				href={"https://github.com/DrInfinite"}
+				title={`GitHub - DrInfinite`}
 				target="_blank"
 			>
 				GitHub
@@ -49,7 +47,7 @@ import Layout from "@/layouts/Layout.astro";
 		<span>
 			<A
 				href={"https://leetcode.com/u/DrInfinite/"}
-				title={`LeetCode - ${leetcode.profile?.realName}`}
+				title={`LeetCode - Naparajith T L`}
 				target="_blank"
 			>
 				LeetCode
