--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,7 @@ import Layout from "@/layouts/Layout.astro";
 	title="404"
 	description="the page that you are looking for doesn't exist"
 >
-	<div class="flex h-[50vh] flex-col gap-4">
+	<div class="flex h-[60vh] flex-col place-content-center gap-4">
 		<h3 class="text-center">
 			404 | The Page you are looking for has moved or doesn't exist ;(
 		</h3>
