--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="500" description="there was an unknown server-side error">
-	<div class="flex h-[50vh] flex-col gap-4">
+	<div class="flex h-[60vh] flex-col place-content-center gap-4">
 		<h3 class="text-center">
 			500 | The Server randomly decided to stop working ;(
 		</h3>
