--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -50,7 +50,7 @@ const translations = [
 		<div
 			class="flex flex-wrap justify-evenly rounded-full border border-border ~gap-2/4 ~p-2/4"
 		>
-			<span>
+			<!-- <span>
 				<A
 					href="https://flowcv.com/resume/mdrssqq018"
 					title="Resume"
@@ -58,7 +58,7 @@ const translations = [
 				>
 					Resume
 				</A>
-			</span>
+			</span> -->
 			<span>
 				<A
 					href="https://www.linkedin.com/in/naparajith/"
@@ -109,7 +109,7 @@ const translations = [
 					translations.map(({ lang, name }) => (
 						<tr>
 							<td>{lang}</td>
-							<td>{name}</td>
+							<td class="font-sans">{name}</td>
 						</tr>
 					))
 				}
