--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -11,55 +11,59 @@ const github = await GithubProfile();
 	title="Contact"
 	description="Get in touch with Naparajith, a Software Engineer from India."
 >
-	<p>
-		Get in touch with me by using the email
-		<A href="mailto:naparajith@duck.com"> naparajith@duck.com</A> or through one
-		of the following social media platforms
-	</p>
-	<div
-		class="flex flex-wrap justify-evenly rounded-full border border-border ~mb-4/8 ~gap-2/4 ~p-2/4"
-	>
-		<span>
-			<A
-				href="https://www.linkedin.com/in/naparajith/"
-				title="LinkedIn - Naparajith T L"
-				target="_blank"
-			>
-				LinkedIn
-			</A>
-		</span>
-		<span>
-			<A
-				href={"https://bsky.app/profile/naparajith.in"}
-				title={`Naparajith | DrInfinite (@naparajith.in)`}
-				target="_blank"
-			>
-				BlueSky
-			</A>
-		</span>
-		<span>
-			<A
-				href={github.html_url}
-				title={`GitHub - ${github.login}`}
-				target="_blank"
-			>
-				GitHub
-			</A>
-		</span>
-	</div>
+	<main class="h-[60vh] place-content-center">
+		<p>
+			Get in touch with me by using the email
+			<A href="mailto:naparajith@duck.com"> naparajith@duck.com</A> or through one
+			of the following social media platforms
+		</p>
+		<div
+			class="flex flex-wrap justify-evenly rounded-full border border-border ~mb-4/8 ~gap-2/4 ~p-2/4"
+		>
+			<span>
+				<A
+					href="https://www.linkedin.com/in/naparajith/"
+					title="LinkedIn - Naparajith T L"
+					target="_blank"
+				>
+					LinkedIn
+				</A>
+			</span>
+			<span>
+				<A
+					href={"https://bsky.app/profile/naparajith.in"}
+					title={`Naparajith | DrInfinite (@naparajith.in)`}
+					target="_blank"
+				>
+					BlueSky
+				</A>
+			</span>
+			<span>
+				<A
+					href={github.html_url}
+					title={`GitHub - ${github.login}`}
+					target="_blank"
+				>
+					GitHub
+				</A>
+			</span>
+		</div>
 
-	<details>
-		<summary>Why is there no Contact Form?</summary>
-		<p>
-			A contact form requires a good amount of client-side JS. I currently have
-			no idea on how to make this client-side code as transparent and as open as
-			possible to the end user. Therefore, for the moment, so such form exists.
-		</p>
-	</details>
-	<details>
-		<summary>Will there be a contact form in the future?</summary>
-		<p>
-			Yes there will be. However, I gurantee no timeline on its implementation.
-		</p>
-	</details>
+		<details>
+			<summary>Why is there no Contact Form?</summary>
+			<p>
+				A contact form requires a good amount of client-side JS. I currently
+				have no idea on how to make this client-side code as transparent and as
+				open as possible to the end user. Therefore, for the moment, so such
+				form exists.
+			</p>
+		</details>
+		<details>
+			<summary>Will there be a contact form in the future?</summary>
+			<p>
+				Yes there will be. However, I gurantee no timeline on its
+				implementation.
+			</p>
+		</details>
+	</main>
 </Layout>
