--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,28 @@ import { GithubProfile } from "@/actions/github-profile";
 import A from "@/components/A.astro";
 import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
+import { getCollection, getEntry } from "astro:content";
 
 const github = await GithubProfile();
 const learning = [
 	"How to read large codebases without getting lost?",
 	"How do memory-corruption vulnerabilities work?",
+	"Ethical exploitation of web applications",
 	"Building a programming language from scratch using LLVM",
-	"How to prevent DDoS attacks on various types of systems?",
-	"How the hell does a Syscall work?",
+	"An in-depth explanation of how the hell a Syscall works",
+	"An in-depth explanation of how to build Firefox extensions.",
+	"Reading a codebase without getting lost or stuck.",
 ];
+
+const quotes = await getCollection("quotes");
+quotes.sort((a, b) => a.data.author.localeCompare(b.data.author));
+const quote = quotes[Math.floor(Math.random() * quotes.length)];
+
+let posts = await getCollection("blog");
+posts = posts.filter((acc) => acc.data.draft !== true);
+const post = posts[Math.floor(Math.random() * posts.length)];
+
+const author = await getEntry(post.data.author);
 ---
 
 <Layout
@@ -107,5 +120,45 @@ const learning = [
 				</A>
 			</p>
 		</div>
+
+		<h3>A random quote that I like</h3>
+		<figure class="place-content-center rounded-lg border border-border p-8">
+			<blockquote cite={quote.data.cite}>{quote.data.quote}</blockquote>
+			<figcaption>
+				<cite>
+					-{" "}
+					<a
+						href={quote.data.cite}
+						title={`${quote.data.author} - ${quote.data.cite}`}
+						target="_blank"
+						class="text-inherit no-underline"
+					>
+						{quote.data.author}
+					</a>
+				</cite>
+			</figcaption>
+			<div class="float-end">
+				<A href="/quotes-i-like" title="Quotes">more like this</A>
+			</div>
+		</figure>
+
+		<h3>A random blog post</h3>
+		<a
+			href={`/blog/${post.id}`}
+			class="flex w-full flex-col justify-evenly rounded-lg border border-border decoration-transparent"
+		>
+			<article class="flex flex-col ~gap-2/4 ~p-2/4">
+				<h4 class="-my-px" transition:name="post-title">
+					{post.data.title}
+				</h4>
+				<small class="-my-px line-clamp-2" transition:name="post-description">
+					{post.data.description}
+				</small>
+			</article>
+			<article class="flex justify-between text-white/60 ~p-2/4">
+				<small>{post.data.created.toDateString()}</small>
+				<small>{author.data.name}</small>
+			</article>
+		</a>
 	</main>
 </Layout>
