style: reduced corner rounding

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -48,7 +48,7 @@ const translations = [
 		</ul>
 
 		<div
-			class="flex flex-wrap justify-evenly rounded-full border border-border ~gap-2/4 ~p-2/4"
+			class="flex flex-wrap justify-evenly rounded-lg border border-border ~gap-2/4 ~p-2/4"
 		>
 			<!-- <span>
 				<A
@@ -92,6 +92,7 @@ const translations = [
 			<span>
 				<A href="/contact" title="Portfolio - Contact"> Contact </A>
 			</span>
+			<span><A href="/blog" title="Blog">Blog</A></span>
 		</div>
 
 		<table class="caption-top">
