--- a/src/components/quick-view/github/GitHub.astro
+++ b/src/components/quick-view/github/GitHub.astro
@@ -7,7 +7,7 @@ export const github = await GithubProfile();
 <h3>GitHub Stats</h3>
 <div>
 	<div
-		class="flex flex-wrap justify-evenly rounded-full border border-border ~gap-2/4 ~p-2/4"
+		class="flex flex-wrap justify-evenly rounded-lg border border-border ~gap-2/4 ~p-2/4"
 	>
 		<span>Repositories: <strong>{github.public_repos}</strong></span>
 		<span>Followers: <strong>{github.followers}</strong></span>
