--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -50,15 +50,6 @@ const translations = [
 		<div
 			class="flex flex-wrap justify-evenly rounded-lg border border-border ~gap-2/4 ~p-2/4"
 		>
-			<!-- <span>
-				<A
-					href="https://flowcv.com/resume/mdrssqq018"
-					title="Resume"
-					target="_blank"
-				>
-					Resume
-				</A>
-			</span> -->
 			<span>
 				<A
 					href="https://www.linkedin.com/in/naparajith/"
@@ -87,10 +78,16 @@ const translations = [
 				</A>
 			</span>
 			<span>
-				<A href="/quotes-i-like" title="Portfolio - Quotes">Quotes</A>
+				<A
+					href={"https://bsky.app/profile/naparajith.in"}
+					title={`Naparajith | DrInfinite (@naparajith.in)`}
+					target="_blank"
+				>
+					BlueSky
+				</A>
 			</span>
 			<span>
-				<A href="/contact" title="Portfolio - Contact"> Contact </A>
+				<A href="/quotes-i-like" title="Portfolio - Quotes">Quotes</A>
 			</span>
 			<span><A href="/blog" title="Blog">Blog</A></span>
 		</div>
