fix: contrast issues

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,15 +28,16 @@ const pathname = Astro.url.pathname;
 					</button>
 				)
 			}
-			<button class="rounded-full px-4">
-				<a
-					href="https://flowcv.com/resume/mdrssqq018"
-					title="Resume"
-					target="_blank"
+			<button
+				class="rounded-full px-4"
+				onclick="window.open('https:\/\/flowcv.com/resume/mdrssqq018')"
+				title="Resume"
+			>
+				<span
 					class="bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent"
 				>
 					Resume
-				</a>
+				</span>
 			</button>
 		</span>
 	</div>
