fix: contrast issues

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,9 @@ const author = await getEntry(post.data.author);
 				/>
 			</span>
 
-			<figcaption class="bg-background text-center ~p-2/4">
+			<figcaption
+				class="bg-background bg-gradient-to-br from-[#d83333] to-[#f041ff] bg-clip-text text-center text-transparent ~p-2/4"
+			>
 				This image comes from my <A href={github.html_url} target="_blank">
 					GitHub Profile
 				</A>
